changed from jdbc to hibernate, added logs